feat: Implement JWT authentication

--- a/.env
+++ b/.env
@@ -1,7 +1,15 @@
+# Server Configuration
 PORT=3000
 
-DB_HOST=127.0.0.1
-DB_USER=root
-DB_PASSWORD=
-DB_DATABASE=phuketkeys_db
-DB_PORT=3307
+# JWT Secret Key
+JWT_SECRET=your-super-secret-key-that-is-long-and-random
+
+# --- เพิ่ม URL ของฐานข้อมูลบน Render ตรงนี้ ---
+DATABASE_URL=postgresql://phuketkeys_db_user:lNKAfFaPdsoIgeV3VU1c6a7fNif8dBSr@dpg-d3kvjvpr0fns73eu768g-a.singapore-postgres.render.com/phuketkeys_db
+
+# --- ตัวแปรเก่าสำหรับ Local MariaDB (โค้ดปัจจุบันไม่ได้ใช้แล้ว) ---
+# DB_HOST=127.0.0.1
+# DB_USER=root
+# DB_PASSWORD=
+# DB_DATABASE=phuketkeys_db
+# DB_PORT=3307
