--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "mysql2": "^3.9.7",
+    "nodemailer": "^7.0.9",
     "pg": "^8.16.3"
   },
   "devDependencies": {
