--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.9",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/node": "^24.10.0",
     "nodemon": "^3.1.0"
   }
 }
